# tBot2026

./: .gitignore  CLAUDE.md  start_backend.sh
backend/: .env  main.py  main_backup.py  pyproject.toml  requirements.txt  strategies.py
backend/tests/: py-vapid.py  test_strategies.py  test_yfinance.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/portfolio/: page.tsx
frontend/app/trading/: page.tsx
frontend/components/: ControlPanel.tsx  InteractiveChart.tsx  SettingsModal.tsx  StockCard.tsx  StockList.tsx  StockTable.tsx
frontend/hooks/: useMediaQuery.ts  useNotifications.ts  usePriceHistory.ts  useStocks.ts
frontend/lib/: api-config.ts
frontend/public/: manifest.json  sw.js
frontend/types/: stock.ts
